--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,36 @@ body {
   position: relative;
 }
 .model-img {
+  position: relative;
   height: fit-content;
 }
 .model-img img {
   width: 100%;
   height: 100%;
   max-height: calc(100vh - 4px);
+}
+.model-img .model-test {
+  position: absolute;
+  top: 25.5%;
+  left: 15.8%;
+  width: 57.1%;
+  height: 69.7%;
+}
+.model-test__block {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.model-test__block .info-box {
+  position: absolute;
+  transform: translate(-50%, -140%);
+  background-color: white;
+  padding: 5px 8px;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 4px;
+  font-size: 16px;
+  white-space: nowrap;
+  z-index: 10;
 }
 
 /* Кнопки на макете */
@@ -53,7 +77,7 @@ body {
   font-weight: 700;
   line-height: 1;
   position: absolute;
-  transform: translate(-50%, 50%);
+  transform: translate(-50%, -50%);
   z-index: 1;
 }
 
