--- a/src/style.css
+++ b/src/style.css
@@ -332,7 +332,7 @@ div.sensor-dot:nth-child(3) span {
   }
 }
 
-/* Модальное окно (для подсказок) */
+/* Модальное окно */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -446,6 +446,68 @@ div.sensor-dot:nth-child(3) span {
 
   tbody tr:hover {
     background: #ddd;
+  }
+}
+
+/* Ввод датчиков в модалке*/
+.modal-content {
+  .sensors-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .sensor-block {
+    background: #f9f9f9;
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+  }
+
+  .sensor-title {
+    font-weight: 700;
+    margin-bottom: 8px;
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .sensor-coords {
+    display: flex;
+    gap: 12px;
+  }
+
+  .coord-field {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    gap: 5px;
+    width: 100%;
+  }
+
+  .coord-field input {
+    background: var(--btn-color-gray);
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+  }
+
+  .button-save {
+    text-align: center;
+    background: var(--main-color-black);
+    width: 100%;
+    color: var(--main-color-white);
+    border: 1px solid var(--main-color-black);
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 5px;
+    transition: all .3s;
+    display: block;
+  }
+  @media (hover:hover) {
+    .button-save:hover {
+      background: var(--btn-color-gray);
+      color: var(--main-color-black);
+    }
   }
 }
 
